<resources>
    <string name="app_name">IceFlame</string>
    <string name="developed_by_nisal_s_wijekoon">Developed by Nisal S Wijekoon</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="log_in_page_title">Log in to Your Account</string>
    <string name="sign_up">Sign up</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="example_email">user@example.com</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create New Account</string>
    <string name="retype_password">Retype Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="watchlist">Watchlist</string>
    <string name="notification">Notification</string>
    <string name="name">Full Name</string>
    <string name="name_hint">Jhone Snow</string>
    <string name="your_wishlist_is_empty">Your Wishlist is empty</string>
    <string name="add_something_delicious_to_your_wishlist">Add something delicious to your wishlist.</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="add_something_delicious_to_your_cart">Add something delicious to your cart.</string>
    <string name="settings">Settings</string>
</resources>