<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/home_24px"
        android:title="@string/home" />

    <item
        android:id="@+id/bottom_nav_category"
        android:icon="@drawable/explore_24px"
        android:title="@string/category" />

    <item
        android:id="@+id/bottom_nav_cart"
        android:icon="@drawable/shopping_cart_24px"
        android:title="@string/cart" />

    <item
        android:id="@+id/bottom_nav_watchlist"
        android:icon="@drawable/favorite_24px"
        android:title="@string/watchlist" />

    <item
        android:id="@+id/bottom_nav_notification"
        android:icon="@drawable/notifications_24px"
        android:title="@string/notification" />

    <item
        android:id="@+id/bottom_nav_setting"
        android:icon="@drawable/settings_24px"
        android:title="@string/settings" />
</menu>