<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="5dp"
        android:paddingBottom="16dp">

        <!-- ================= TOP CONTENT ================= -->

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_no_bg_ice_flame" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-15dp"
            android:text="@string/create_new_account"
            android:textSize="26sp"
            android:textStyle="bold" />

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUp_input_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            android:background="@drawable/custom_input_search"/>

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUp_input_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="16sp"
            android:background="@drawable/custom_input_search"/>

        <!-- Password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUp_input_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="16sp"
            android:background="@drawable/custom_input_search"/>

        <!-- Password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/retype_password"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signUp_input_retype_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="16sp"
            android:background="@drawable/custom_input_search"/>

        <!-- Spacer pushes buttons to bottom -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- ================= BOTTOM ACTIONS ================= -->

        <!-- Sign In Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp_btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            app:cornerRadius="12dp" />

        <!-- Create Account Row -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoToLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="14sp"
                android:minWidth="0dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textStyle="bold"
                style="@style/Widget.Material3.Button.TextButton" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>